test/error/unmatched_else.sv
// pattern: `else directive outside of an `if/`endif block
`else
